<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_behavior_tree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mchale.blake@gmail.com">bmchale</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>nav2_behavior_tree</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>robot_control_interfaces</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_util</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
